--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "uuid": "^13.0.0",
     "zustand": "^5.0.8"
